# MyCMTarget

CMTarget/: pip  readme.md
CMTarget-llm/: cmatrget-llm-readme.md  data_process.py  feature_extract.py  interaction_pred.py  main.py  model.py  multi_fusion.py
CMTarget-llm/configs/: config.json
CMTarget-llm/configs/20260314_103431/: config.json
CMTarget-llm/configs/20260314_103854/: config.json
CMTarget-llm/data/data_shuffle/: drugbank_shuffle.csv
CMTarget-llm/data/encoder/: drugbank_20pct.pt  drugbank_80pct.pt  drugbank_feature.pt  drugbank_pred.pt  hit_20pct.pt  hit_80pct.pt  hit_feature.pt  tmp.txt
CMTarget-llm/data/shuffle/: drugbank_20pct.csv  drugbank_80pct.csv  drugbank_pred.csv  hit_20pct.csv  hit_80pct.csv
CMTarget-llm/dustbin/: encoded_hit.pt
CMTarget-llm/embedding/: FeatureExtract.py  dataset_build.py
CMTarget-llm/fineTuner/: FineTunner.py
CMTarget-llm/model/: CMTargetModel.py  moe.py  scorer.py
CMTarget-llm/predictor/: CMTargetPredictor.py
CMTarget-llm/trainer/: CMTargetTrainer.py
CMTarget-llm/utils/: metrix.py  pyproject.toml  utils.py
CMTarget/datasets/: CMTargetDataset.py  extract_drug_graph.py  preextract.py  preprocess.py
CMTarget/models/: CMTargetModel.py
CMTarget/predictor/: CMTargetPredictor.py
CMTarget/trainer/: CMTargetTrainer.py
CMTarget/utils/: utils.py
dustbin/: 23-03-01-dustbinCode.py  260312-2348.txt  260314-dustbin.py  data_path.py  dataset_build.py  encoder_progress.py  feature_decoder.py  interaction_pred.py  mainV0.py  思路梳理.txt  碎碎念.md
dustbin/dustbin_data/data_shuffle/: hit_shuffle.csv
(+10 files in other folders)
