[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmtarget"
version = "0.1.0"
description = "Short description of your project"
readme = "readme.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    { name = "Your Name", email = "your@email.com" }
]

dependencies = [
    "matplotlib",
    "rdkit-pypi",
    "scikit-learn>=1.1.3",
    "numpy>=1.24",
    "torch>=2.8.0+cu126",
    "torchvision=0.23.0+cu126",
    "tqdm",
    "transformers>=4.30",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[project.urls]
Homepage = "https://github.com/yourname/yourrepo"
Issues = "https://github.com/yourname/yourrepo/issues"

[tool.setuptools.packages.find]
where = ["."]
